--- a/ui/src/oce/layout/header.scss
+++ b/ui/src/oce/layout/header.scss
@@ -10,7 +10,7 @@
     color: white;
     margin-top: 20px;
     text-transform: uppercase;
-    @media screen and (max-width: 1024px){
+    @media screen and (max-width: 992px){
         margin-bottom: 10px;
         margin-top: 10px;
         overflow: hidden;
@@ -34,7 +34,7 @@
         padding-left: 10px;
         border-left: 1px solid white;
         font-family: 'Montserrat', sans-serif;
-        @media screen and (max-width: 1024px) {
+        @media screen and (max-width: 992px) {
             font-size: 18px;
         }
     }
